<resources>
    <string name="app_name">Geeknews</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="send">Send</string>


    <string name="set_description">BTS (Korean: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a seven-member South Korean boy band that began formation in 2010 and debuted in 2013 under Big Hit Entertainment.[4] The septet—composed of RM, Jin, Suga, J-Hope, Jimin, V, and Jungkook—co-writes and co-produces much of their own output. Originally a hip hop group, their musical style has evolved to include a wide range of genres. Their lyrics, often focused on personal and social commentary, touch on the themes of mental health, troubles of school-age youth, loss, the journey towards loving oneself, and individualism. Their work features references to literature and psychological concepts and includes an alternative universe storyline. The group has released several albums and performed on several world tours.
        After debuting in 2013 with their single album 2 Cool 4 Skool, BTS released their first Korean-language studio album, Dark and Wild, and Japanese-language studio album, Wake Up, in 2014. The groups second Korean studio album, Wings (2016), was their first to sell one million copies in South Korea. By 2017, BTS crossed into the global music market, leading the Korean Wave into the United States and breaking numerous sales records. They became the first Korean group to receive a certification from the Recording Industry Association of America (RIAA) for their single "Mic Drop", as well as the first Korean act to top the US Billboard 200 chart with their studio album Love Yourself: Tear (2018). BTS also became the fastest group since the Beatles to earn four US number-one albums, doing so in less than two years.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="gmail">Connect with gmail</string>
    <string name="login">Login</string>
    <string name="register">I’m a new user?, sign up</string>
    <string name="new_password">New Password</string>
</resources>