<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/nav_trending"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/nav_category"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/nav_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/nav_setting"
        android:title="@string/title_setting" />

</menu>